Add route to update a comment
